Fallback to 300x150 instead of 0x0 size for SVG inside content()

Prior to r379801, the fallback 300x150 in SVGImage::dataChanged() was
used. Post r379801 we instead used the empty rect as fallback. Both
are probably wrong but 300x150 matches what we did previously more
closely and we are less likely to end up with an empty image.

BUG=623528

Review-Url: https://codereview.chromium.org/2121973002
Cr-Commit-Position: refs/heads/master@{#404374}

Former-commit-id: da6dc5be059c4dd6a6b7f1a4ba9c1f12be3d67ae